# demo-rag-noi-quy-cong-ty

./: .env.example  .gitignore  LICENSE  README.md  app.py  config.py  eval.py  eval_questions.json  ingest.py  pyproject.toml  rag.py  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: noi_quy_cong_ty.md
tests/: test_config.py  test_eval.py  test_ingest.py  test_rag.py
